Source/WebCore/bindings/js/JSSVGLengthCustom.cpp
@@ -81,7 +81,7 @@ JSValue JSSVGLength::convertToSpecifiedUnits(ExecState* exec)
     SVGLength& podImp = impl()->propertyReference();
 
     if (exec->argumentCount() < 1)
-        return throwError(exec, createSyntaxError(exec, "Not enough arguments"));
+        return throwError(exec, createTypeError(exec, "Not enough arguments"));
 
     unsigned short unitType = exec->argument(0).toUInt32(exec);
     if (exec->hadException())
